...
import androidx.compose.ui.unit.dp
import androidx.compose.ui.unit.sp
import com.lalosapps.artspace.data.Artwork
import com.lalosapps.artspace.data.ArtworkProvider.Companion.images
import com.lalosapps.artspace.ui.theme.ArtSpaceTheme

const val PREVIOUS_BUTTON_TAG = "previous"
const val NEXT_BUTTON_TAG = "next"

class MainActivity : ComponentActivity() {
    override fun onCreate(savedInstanceState: Bundle?) {
        super.onCreate(savedInstanceState)
        setContent {
            MyArtSpaceApp()
...
